replace custom static page rendering with thoughtbot/high_voltage

--- a/app/views/pages/api.html.erb
+++ b/app/views/pages/api.html.erb
@@ -33,7 +33,7 @@
           </tr>
           <tbody>
 </table>
-<p class="sultext"><%= link_to "See Full Spec", static_pages_pubapi_path %></p>
+<p class="sultext"><%= link_to "See Full Spec", page_path('pubapi') %></p>
 <hr style="color:#000;background-color:#000;border-color:#000"/>
      
  
@@ -51,7 +51,7 @@
           </tr>
           <tbody>
 </table>
-<p class="sultext"><%= link_to "See Full Spec", static_pages_pubsapi_path %></p>
+<p class="sultext"><%= link_to "See Full Spec", page_path('pubsapi') %></p>
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
@@ -73,7 +73,7 @@
           </tr>
           <tbody>
 </table>
-<p class="sultext"><%= link_to "See Full Spec", static_pages_pollapi_path %></p>
+<p class="sultext"><%= link_to "See Full Spec", page_path('pollapi') %></p>
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
@@ -91,7 +91,7 @@
           </tr>
           <tbody>
 </table>
-<p class="sultext"><%= link_to "See Full Spec", static_pages_authorshipapi_path %></p>
+<p class="sultext"><%= link_to "See Full Spec", page_path('authorshipapi') %></p>
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
@@ -113,7 +113,7 @@
           </tr>
           <tbody>
 </table>
-<p class="sultext"><%= link_to "See Full Spec", static_pages_queryapi_path %></p>
+<p class="sultext"><%= link_to "See Full Spec", page_path('queryapi') %></p>
 
   
 
