--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <!-- <%= link_to "SUL Publications Server", '#', id: "logo" %> -->
      <!-- <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Main Page",    static_pages_home_path %></li>
+          <li><%= link_to "Main Page",    root_path %></li>
         </ul>
       </nav>-->
     </div>
