Handle sourcelookup by pmid / PubmedId

--- a/app/views/pages/api.html.erb
+++ b/app/views/pages/api.html.erb
@@ -95,7 +95,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications/sourcelookup?year={}&title={}&source={}&doi={}</h5>
+<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications/sourcelookup?year={}&title={}&source={}&doi={}&pmid={}</h5>
 <p class="sultext">Returns all matching publications from remote sources or from users' locally submitted publications.  </p>
 <table class="table table-striped">
         <tbody>
