Include SUL logo as an application asset

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <div class="container">
       <nav class="brand">
-      <%= link_to image_tag("http://searchworks.stanford.edu/assets/sul_logo-8040e3edbeb47ca2e0caaffd363fd438.png", alt: "SUL"), 'http://library.stanford.edu/' %>
+      <%= link_to image_tag("sul-logo.png", alt: "SUL"), 'http://library.stanford.edu/' %>
     </nav>
       <!-- <%= link_to "SUL Publications Server", '#', id: "logo" %> -->
      <!-- <nav>
