Update to Rails 4, Bootstrap 3

--- a/app/views/pages/pubsapi.html.erb
+++ b/app/views/pages/pubsapi.html.erb
@@ -1,4 +1,4 @@
-<div class="center hero-unit">
+<div class="hero-unit">
 <h2>Resource Description</h2>
 
 <b style="font-size:large">http://sulcap.stanford.edu/publications</b>
