--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,20 @@
-<header class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <nav class="brand">
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <%= link_to image_tag("sul-logo.png", alt: "SUL"), 'http://library.stanford.edu/' %>
-    </nav>
+    </div>
       <!-- <%= link_to "SUL Publications Server", '#', id: "logo" %> -->
      <!-- <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Main Page",    root_path %></li>
         </ul>
       </nav>-->
-    </div>
   </div>
-</header>
+</nav>
